finishing all the proyect

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53146069c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -163,14 +164,17 @@
                 <ul>
                     <li>
                         <a href="https://www.facebook.com/Fabiotriana.web" class="footer__icon-social icon__social-facebook" target="_blank">
+                            <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://wa.link/183g0i" class="footer__icon-social icon__social-twitter" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/soyfabiotriana/" class="footer__icon-social icon__social-instagram" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                 </ul>
