--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </navbar>
     </header>
     <main>
-        <div class="wrapper">
+        <div class="wrapper__hero">
             <div class="section hero">
                 <div class="section__info">
                     <h1 class="section__title">All your files in one secure location, accessible anywhere.</h1>
@@ -44,7 +44,7 @@
 
     
         <div class="section productive">
-            <div class="wrapper--productive">
+            <div class="wrapper__productive">
 
                 <div class="section__info">
                     <h2 class="section__title">Stay productive, wherever you are</h2>
@@ -78,7 +78,7 @@
 
         </div>
     
-        <div class="wrapper__subscribe">
+        <div class="wrapper__subscribe ">
             <div class="section subscribe">
 
                 <div class="section__info">
